<resources>
    <string name="app_name">Homework1</string>
    <string name="content_provider">ContentProvider</string>
    <string name="broadcast_receiver">BroadCastReceiver</string>
    <string name="service">Service</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="error">Error</string>
    <string name="enter_value">Enter value</string>
    <string name="load_data">Load data</string>
    <string name="title_broadcast_receiver">Broadcast Receiver</string>
</resources>